--- a/public/css/modern-business.css
+++ b/public/css/modern-business.css
@@ -122,6 +122,26 @@ footer {
   border-color: #B12F6E;
 }
 
+/* Marco Google Maps */
+
 iframe {
   border: 2px solid #bf3176;
 }
+
+/* Barra cookies */
+#barraaceptacion {
+  /*display:none;*/
+  position:fixed;
+  left:0px;
+  right:0px;
+  bottom:0px;
+  padding-bottom:10px;
+  width:100%;
+  text-align:center;
+  min-height:30px;
+  background-color: rgba(191, 49, 118, 0.7);
+  color:#fff;
+  z-index:99999;
+}
+
+a.ok {padding:4px;color:#CCC;text-decoration:none;}
